[gd_scene load_steps=17 format=3 uid="uid://iqp76400gusu"]

[ext_resource type="Script" uid="uid://dqt0w4tf5g1i1" path="res://Scripts/Enviroment/spaceship_script.gd" id="1_j11a6"]
[ext_resource type="Texture2D" uid="uid://cuuooyhwka4xh" path="res://Assets/Img/Decorations/Universe/broken_spaceship.png" id="2_08hyb"]
[ext_resource type="Texture2D" uid="uid://doxmwqj4w17vc" path="res://Assets/Img/Decorations/Universe/explo1.png" id="3_y3fmx"]
[ext_resource type="Texture2D" uid="uid://bpbweky21yi3l" path="res://Assets/Img/Decorations/Universe/explo2.png" id="4_gmgj5"]
[ext_resource type="Texture2D" uid="uid://7g7nl27nt4gq" path="res://Assets/Img/Decorations/Universe/explo3.png" id="5_sei0y"]
[ext_resource type="Texture2D" uid="uid://dar767g80cwvp" path="res://Assets/Img/Decorations/Universe/Interactive/door_spaceship.png" id="6_1xgbd"]
[ext_resource type="Texture2D" uid="uid://ni01ftqvvivn" path="res://Assets/Img/Decorations/Universe/Interactive/broken_module.png" id="7_g711r"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0r4sc"]
radius = 48.0
height = 96.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kcgms"]
radius = 63.0
height = 332.0

[sub_resource type="CircleShape2D" id="CircleShape2D_t8knu"]
radius = 59.2115

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c3ud2"]
size = Vector2(51.9171, 136.796)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d2ysa"]
radius = 42.2414
height = 151.724

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jkr4f"]
size = Vector2(115.172, 51.3793)

[sub_resource type="Animation" id="Animation_2034x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, 6.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Interactive/Door:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7.99999, 6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Interactive/broken_module:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-10, -2)]
}

[sub_resource type="Animation" id="Animation_ask14"]
resource_name = "supend"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(8, 6), Vector2(8, 8), Vector2(8, 9), Vector2(8, 8), Vector2(8, 6), Vector2(8, 5), Vector2(8, 6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Interactive/Door:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3.03333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(7.99999, 6), Vector2(8, 8), Vector2(8, 9), Vector2(8, 8), Vector2(7.99999, 6), Vector2(8, 5), Vector2(7.99999, 6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Interactive/broken_module:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3.03333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(8, 6), Vector2(8, 8), Vector2(8, 9), Vector2(8, 8), Vector2(8, 6), Vector2(8, 5), Vector2(8, 6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1f3gn"]
_data = {
&"RESET": SubResource("Animation_2034x"),
&"supend": SubResource("Animation_ask14")
}

[node name="Spaceship_home" type="CharacterBody2D" groups=["spaceship"]]
script = ExtResource("1_j11a6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 2
position = Vector2(8, 6.5)
scale = Vector2(1.16, 1.17105)
texture = ExtResource("2_08hyb")

[node name="Area2D" type="Area2D" parent="." groups=["spaceship"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=["spaceship"]]
position = Vector2(-351, -158)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_0r4sc")
debug_color = Color(1, 1, 1, 0.129412)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(179, -54)
shape = SubResource("CapsuleShape2D_kcgms")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(226, 96)
shape = SubResource("CircleShape2D_t8knu")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(268.907, -211.379)
rotation = 1.11177
shape = SubResource("RectangleShape2D_c3ud2")

[node name="ParallaxBackground1" type="ParallaxBackground" parent="."]
layer = -2

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground1"]
motion_scale = Vector2(0.9, 0.9)

[node name="explo1" type="Sprite2D" parent="ParallaxBackground1/ParallaxLayer"]
z_index = -1
position = Vector2(-330, -30)
texture = ExtResource("3_y3fmx")

[node name="ParallaxBackground2" type="ParallaxBackground" parent="ParallaxBackground1"]
layer = 0

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground1/ParallaxBackground2"]
motion_scale = Vector2(1.15, 1.15)

[node name="explo2" type="Sprite2D" parent="ParallaxBackground1/ParallaxBackground2/ParallaxLayer"]
z_index = 2
position = Vector2(-579, 35)
rotation = -0.55676
texture = ExtResource("4_gmgj5")

[node name="explo3" type="Sprite2D" parent="ParallaxBackground1/ParallaxBackground2/ParallaxLayer"]
z_index = 2
position = Vector2(321, 401)
texture = ExtResource("5_sei0y")

[node name="Interactive" type="Node2D" parent="."]

[node name="Door" type="Sprite2D" parent="Interactive"]
position = Vector2(7.99999, 6)
scale = Vector2(1.16, 1.16)
texture = ExtResource("6_1xgbd")

[node name="Area2D" type="Area2D" parent="Interactive/Door"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactive/Door/Area2D"]
position = Vector2(287.069, -42.2414)
shape = SubResource("CapsuleShape2D_d2ysa")
debug_color = Color(0.7, 0, 0, 0.152941)

[node name="broken_module" type="Sprite2D" parent="Interactive"]
texture_filter = 2
position = Vector2(-10, -2)
scale = Vector2(1.16, 1.16)
texture = ExtResource("7_g711r")

[node name="CPUParticles2D" type="CPUParticles2D" parent="Interactive/broken_module"]
position = Vector2(-52, -58)
rotation = -3.54825
amount = 4
lifetime = 0.2
explosiveness = 0.38
randomness = 0.15
lifetime_randomness = 0.15
emission_shape = 4
emission_points = PackedVector2Array(0, 0, 0, 0, 0, 0)
emission_colors = PackedColorArray()
direction = Vector2(90, 0)
gravity = Vector2(0, 100)
initial_velocity_min = 172.04
initial_velocity_max = 483.87
damping_min = 8.602
damping_max = 8.602
scale_amount_max = 2.0
split_scale = true
scale_curve_x = null
scale_curve_y = null

[node name="Area2D" type="Area2D" parent="Interactive/broken_module"]
position = Vector2(-46.5517, -44.8276)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactive/broken_module/Area2D"]
z_index = 1
position = Vector2(-29.1379, -11.8966)
shape = SubResource("RectangleShape2D_jkr4f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
&"": SubResource("AnimationLibrary_1f3gn")
}
autoplay = "supend"

[connection signal="mouse_entered" from="Interactive/Door/Area2D" to="." method="_door_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Interactive/Door/Area2D" to="." method="_door_on_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="Interactive/broken_module/Area2D" to="." method="_broken_module_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Interactive/broken_module/Area2D" to="." method="_broken_module_on_area_2d_mouse_exited"]
